# exhibition

./: Dockerfile  README.md  docker-compose.yml  initial_data.json  initial_data.py  main.py  pyproject.toml
app/: database.py  endpoints.py  models.py  schemas.py  settings.py
tests/: conftest.py  test_endpoints.py
